// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline 组件 快照测试 交替模式时间轴快照 1`] = `
<ol
  aria-label="时间轴"
  class="cream-timeline cream-timeline--vertical cream-timeline--mode-alternate"
>
  <li
    aria-label="时间节点：已完成"
    class="cream-timeline__item cream-timeline__item--completed"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__tail"
    />
    <div
      aria-hidden="true"
      class="cream-timeline__node"
    >
      <span
        class="cream-timeline__node-inner"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="10"
          viewBox="0 0 16 16"
          width="10"
        >
          <path
            d="M2.5 8l4 4 7-7"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </span>
    </div>
    <div
      class="cream-timeline__content"
    >
      <time
        class="cream-timeline__timestamp"
        datetime="2026-01-01"
      >
        2026-01-01
      </time>
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          步骤一
        </span>
      </div>
      <div
        class="cream-timeline__body"
      >
        内容一
      </div>
    </div>
  </li>
  <li
    aria-label="时间节点：进行中"
    class="cream-timeline__item cream-timeline__item--processing cream-timeline__item--alternate-right"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__tail"
    />
    <div
      aria-hidden="true"
      class="cream-timeline__node"
    >
      <span
        class="cream-timeline__node-inner"
      >
        <span
          aria-hidden="true"
          class="cream-timeline__processing-dot"
        />
      </span>
    </div>
    <div
      class="cream-timeline__content"
    >
      <time
        class="cream-timeline__timestamp"
        datetime="2026-01-02"
      >
        2026-01-02
      </time>
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          步骤二
        </span>
      </div>
      <div
        class="cream-timeline__body"
      >
        内容二
      </div>
    </div>
  </li>
  <li
    aria-label="时间节点：待处理"
    class="cream-timeline__item cream-timeline__item--pending cream-timeline__item--last"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__node"
    >
      <span
        class="cream-timeline__node-inner"
      />
    </div>
    <div
      class="cream-timeline__content"
    >
      <time
        class="cream-timeline__timestamp"
        datetime="2026-01-03"
      >
        2026-01-03
      </time>
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          步骤三
        </span>
      </div>
      <div
        class="cream-timeline__body"
      >
        内容三
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline 组件 快照测试 包含自定义图标和颜色的快照 1`] = `
<ol
  aria-label="时间轴"
  class="cream-timeline cream-timeline--vertical cream-timeline--mode-left"
>
  <li
    aria-label="时间节点：已完成"
    class="cream-timeline__item cream-timeline__item--completed"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__tail"
    />
    <div
      aria-hidden="true"
      class="cream-timeline__node cream-timeline__node--custom"
      style="background-color: rgb(168, 85, 247); border-color: #a855f7;"
    >
      <span
        class="cream-timeline__node-inner"
      >
        ★
      </span>
    </div>
    <div
      class="cream-timeline__content"
    >
      <time
        class="cream-timeline__timestamp"
        datetime="2026-01-01"
      >
        2026-01-01
      </time>
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          自定义图标
        </span>
      </div>
    </div>
  </li>
  <li
    aria-label="时间节点：进行中"
    class="cream-timeline__item cream-timeline__item--processing cream-timeline__item--last"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__node"
    >
      <span
        class="cream-timeline__node-inner"
      >
        <span
          aria-hidden="true"
          class="cream-timeline__processing-dot"
        />
      </span>
    </div>
    <div
      class="cream-timeline__content"
    >
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          进行中
        </span>
      </div>
      <div
        class="cream-timeline__body"
      >
        正在处理
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline 组件 快照测试 水平时间轴快照 1`] = `
<ol
  aria-label="时间轴"
  class="cream-timeline cream-timeline--horizontal"
>
  <li
    aria-label="时间节点：已完成"
    class="cream-timeline__item cream-timeline__item--completed"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__tail"
    />
    <div
      aria-hidden="true"
      class="cream-timeline__node"
    >
      <span
        class="cream-timeline__node-inner"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="10"
          viewBox="0 0 16 16"
          width="10"
        >
          <path
            d="M2.5 8l4 4 7-7"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </span>
    </div>
    <div
      class="cream-timeline__content"
    >
      <time
        class="cream-timeline__timestamp"
        datetime="2026-01-01"
      >
        2026-01-01
      </time>
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          步骤一
        </span>
      </div>
      <div
        class="cream-timeline__body"
      >
        内容一
      </div>
    </div>
  </li>
  <li
    aria-label="时间节点：进行中"
    class="cream-timeline__item cream-timeline__item--processing"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__tail"
    />
    <div
      aria-hidden="true"
      class="cream-timeline__node"
    >
      <span
        class="cream-timeline__node-inner"
      >
        <span
          aria-hidden="true"
          class="cream-timeline__processing-dot"
        />
      </span>
    </div>
    <div
      class="cream-timeline__content"
    >
      <time
        class="cream-timeline__timestamp"
        datetime="2026-01-02"
      >
        2026-01-02
      </time>
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          步骤二
        </span>
      </div>
      <div
        class="cream-timeline__body"
      >
        内容二
      </div>
    </div>
  </li>
  <li
    aria-label="时间节点：待处理"
    class="cream-timeline__item cream-timeline__item--pending cream-timeline__item--last"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__node"
    >
      <span
        class="cream-timeline__node-inner"
      />
    </div>
    <div
      class="cream-timeline__content"
    >
      <time
        class="cream-timeline__timestamp"
        datetime="2026-01-03"
      >
        2026-01-03
      </time>
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          步骤三
        </span>
      </div>
      <div
        class="cream-timeline__body"
      >
        内容三
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline 组件 快照测试 默认垂直时间轴快照 1`] = `
<ol
  aria-label="时间轴"
  class="cream-timeline cream-timeline--vertical cream-timeline--mode-left"
>
  <li
    aria-label="时间节点：已完成"
    class="cream-timeline__item cream-timeline__item--completed"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__tail"
    />
    <div
      aria-hidden="true"
      class="cream-timeline__node"
    >
      <span
        class="cream-timeline__node-inner"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="10"
          viewBox="0 0 16 16"
          width="10"
        >
          <path
            d="M2.5 8l4 4 7-7"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </span>
    </div>
    <div
      class="cream-timeline__content"
    >
      <time
        class="cream-timeline__timestamp"
        datetime="2026-01-01"
      >
        2026-01-01
      </time>
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          步骤一
        </span>
      </div>
      <div
        class="cream-timeline__body"
      >
        内容一
      </div>
    </div>
  </li>
  <li
    aria-label="时间节点：进行中"
    class="cream-timeline__item cream-timeline__item--processing"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__tail"
    />
    <div
      aria-hidden="true"
      class="cream-timeline__node"
    >
      <span
        class="cream-timeline__node-inner"
      >
        <span
          aria-hidden="true"
          class="cream-timeline__processing-dot"
        />
      </span>
    </div>
    <div
      class="cream-timeline__content"
    >
      <time
        class="cream-timeline__timestamp"
        datetime="2026-01-02"
      >
        2026-01-02
      </time>
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          步骤二
        </span>
      </div>
      <div
        class="cream-timeline__body"
      >
        内容二
      </div>
    </div>
  </li>
  <li
    aria-label="时间节点：待处理"
    class="cream-timeline__item cream-timeline__item--pending cream-timeline__item--last"
  >
    <div
      aria-hidden="true"
      class="cream-timeline__node"
    >
      <span
        class="cream-timeline__node-inner"
      />
    </div>
    <div
      class="cream-timeline__content"
    >
      <time
        class="cream-timeline__timestamp"
        datetime="2026-01-03"
      >
        2026-01-03
      </time>
      <div
        class="cream-timeline__title"
      >
        <span
          class="cream-timeline__title-text"
        >
          步骤三
        </span>
      </div>
      <div
        class="cream-timeline__body"
      >
        内容三
      </div>
    </div>
  </li>
</ol>
`;
